--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<meta name="twitter:image" content="https://ontweak.com/ontweak_files/ontweak_logo.png">
 		<!-- Icons -->
 		<link rel="stylesheet" href="css/icon-font.css">
+	        <img src="images/Roblox%20Logo.svg" alt="">
 		<link rel="stylesheet" href="css/all.css" crossorigin="anonymous">
 		<link rel="canonical" href="https://onmod.site">
 		<!-- Google Fonts -->
