--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- Twitter Meta -->
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@tweetname">
-		<meta name="twitter:title" content="Bx1.site">
+		<meta name="twitter:title" content="onmod.site">
 		<meta name="twitter:description" content="Modded Apps & Game Resources">
 		<meta name="twitter:image" content="https://ontweak.com/ontweak_files/ontweak_logo.png">
 		<!-- Icons -->
@@ -83,6 +83,15 @@
 							<div class="app-title">Dress To Impress Items</div>
 							<div class="app-link-wrapper">
 								<a href="https://dresstoimpress2025.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+							</div>
+						</div>
+					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
+							<img src="images/snapchat.png" class="app-icon-img img-fluid">
+							<div class="app-title">SNAPCHAT SCORE</div>
+							<div class="app-link-wrapper">
+								<a href="https://scoretop.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
