--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
 							<img src="images/tiktok.png" class="app-icon-img img-fluid">
-							<div class="app-title">Genshin Impact</div>
+							<div class="app-title">TIKTOK FOLLOWERS</div>
 							<div class="app-link-wrapper">
 								<a href="https://tiktokcenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
