--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="description" content="Modded Apps For Free on iOS and Android">    
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="icon" type="image/ico" href="images/favicon.ico">
+		<link rel="icon" type="image/ico" href="images/favicon.png">
 		<!-- Open Graph Meta Tags-->
 		<meta property="og:title" content="Modded Apps For Free on iOS and Android"> <!-- Title which is displayed when your site is shared on social networks -->
 		<meta property="og:description" content="Modded Apps For Free on iOS and Android"> <!-- Website description which is displayed when your site is shared on social networks -->
@@ -19,7 +19,6 @@
 		<meta name="twitter:image" content="https://ontweak.com/ontweak_files/ontweak_logo.png">
 		<!-- Icons -->
 		<link rel="stylesheet" href="css/icon-font.css">
-	        <img src="images/Roblox%20Logo.svg" alt="">
 		<link rel="stylesheet" href="css/all.css" crossorigin="anonymous">
 		<link rel="canonical" href="https://onmod.site">
 		<!-- Google Fonts -->
