--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="description" content="Modded Apps For Free on iOS and Android">    
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="icon" type="image/png" href="/favicon.png">
+		<link rel="icon" type="image/png" href="https://imgur.com/a/T11WNLm.png">
 		<!-- Open Graph Meta Tags-->
 		<meta property="og:title" content="Modded Apps For Free on iOS and Android"> <!-- Title which is displayed when your site is shared on social networks -->
 		<meta property="og:description" content="Modded Apps For Free on iOS and Android"> <!-- Website description which is displayed when your site is shared on social networks -->
