--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 
- --><!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-		<title>Modded Apps For Free on iOS and Android</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<meta name="description" content="Modded Apps For Free on iOS and Android">    
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="icon" href="https://i.imgur.com/yGn9d6L.png" type="image/png">
-		<!-- Open Graph Meta Tags-->
-		<meta property="og:title" content="Modded Apps For Free on iOS and Android"> <!-- Title which is displayed when your site is shared on social networks -->
-		<meta property="og:description" content="Modded Apps For Free on iOS and Android"> <!-- Website description which is displayed when your site is shared on social networks -->
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="http://www.mywebsiteurl.com/"> <!-- Your Website URL -->
-		<meta property="og:image" content="images/ontweak_logo.png">	<!-- Absolute Path to the Image which will display, when your website is shared on social networks -->
-		<!-- Twitter Meta -->
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:site" content="@tweetname">
-		<meta name="twitter:title" content="onmod.site">
-		<meta name="twitter:description" content="Modded Apps & Game Resources">
-		<meta name="twitter:image" content="https://ontweak.com/ontweak_files/ontweak_logo.png">
-		<!-- Icons -->
-		<link rel="stylesheet" href="css/icon-font.css">
-		<link rel="stylesheet" href="css/all.css" crossorigin="anonymous">
-		<link rel="canonical" href="https://onmod.site">
-		<!-- Google Fonts -->
-		<link href="css/css.css" rel="stylesheet">
-		<!-- CSS -->
-		<link href="css/bootstrap.css" rel="stylesheet">  
-		<link href="css/animate.css" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet">	
-	</head>
+<head>
+  <title>Modded Apps For Free on iOS and Android</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="description" content="Modded Apps For Free on iOS and Android">
+  <meta charset="UTF-8">
+
+  <!-- Correct Favicon (use PNG or ICO for best browser support) -->
+  <link rel="icon" href="https://i.imgur.com/yGn9d6L.png" type="image/png">
+
+  <!-- Open Graph Meta Tags (fix image path here too) -->
+  <meta property="og:title" content="Modded Apps For Free on iOS and Android">
+  <meta property="og:description" content="Modded Apps For Free on iOS and Android">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://onmod.site">
+  <meta property="og:image" content="https://i.imgur.com/yGn9d6L.png">
+
+  <!-- Twitter Meta -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@tweetname">
+  <meta name="twitter:title" content="onmod.site">
+  <meta name="twitter:description" content="Modded Apps & Game Resources">
+  <meta name="twitter:image" content="https://i.imgur.com/yGn9d6L.png">
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="css/icon-font.css">
+  <link rel="stylesheet" href="css/all.css" crossorigin="anonymous">
+  <link rel="canonical" href="https://onmod.site">
+  <link href="css/css.css" rel="stylesheet">
+  <link href="css/bootstrap.css" rel="stylesheet">  
+  <link href="css/animate.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">	
+</head>
 	<body>
 		<div id="particles-js"></div>
 		<header>
