--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
 
   <!-- Correct Favicon (use PNG or ICO for best browser support) -->
-  <link rel="icon" href="https://i.imgur.com/yGn9d6L.png" type="image/png">
+  <link rel="icon" href="https://i.imgur.com/kX5Q4EW.png" type="image/png">
 
   <!-- Open Graph Meta Tags (fix image path here too) -->
   <meta property="og:title" content="Modded Apps For Free on iOS and Android">
