--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<img src="images/roblox.png" class="app-icon-img img-fluid">
 							<div class="app-title">ROBLOX ROBUX</div>
 							<div class="app-link-wrapper">
-								<a href="https://rbxcenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://rbxcenter.netlify.app/"><span class="lnr lnr-download"></span>Claim</a>
 							</div>
 						</div>
 					</div>	
