--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 							<img src="images/dti.png" class="app-icon-img img-fluid">
 							<div class="app-title">Dress To Impress Items</div>
 							<div class="app-link-wrapper">
-								<a href="https://dresstoimpress2025.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://dresstoimpress2025.netlify.app/"><span class="lnr lnr-download"></span>claim</a>
 							</div>
 						</div>
 					</div>
