--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
 							<img src="images/snapchat.png" class="app-icon-img img-fluid">
-							<div class="app-title">SNAPCHAT SCORE</div>
+							<div class="app-title">SNAPCHAT score</div>
 							<div class="app-link-wrapper">
-								<a href="https://scoretop.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://contentlocked.net/cl/i/qkv6v5/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
