--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
 							<img src="images/genshin.png" class="app-icon-img img-fluid">
+							<div class="app-title">Zenless</div>
+							<div class="app-link-wrapper">
+								<a href="https://locked3.com/cl/i/volov2"><span class="lnr lnr-download"></span>Install</a>
+							</div>
+						</div>
+					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
+							<img src="images/genshin.png" class="app-icon-img img-fluid">
 							<div class="app-title">Genshin Impact</div>
 							<div class="app-link-wrapper">
 								<a href="https://primogemscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
