--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 							<img src="images/loveisland.png" class="app-icon-img img-fluid">
 							<div class="app-title">Love Island</div>
 							<div class="app-link-wrapper">
-								<a href="https://loveislandcenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://mobileverify.net/cl/i/ndkdmv"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
@@ -161,7 +161,7 @@
 		<footer>
 			<div class="container">
 				<div class="footer-content">
-					<p>© 2025 • https://onmod.site/ • Modded Apps • Game Resources</p>
+					<p>© 2025 • onmod.site • Modded Apps • Game Resources</p>
 				</div>
 			</div>
 		</footer>
