--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 							<img src="images/whiteoutsurvival.png" class="app-icon-img img-fluid">
 							<div class="app-title">Whiteout Survival</div>
 							<div class="app-link-wrapper">
-								<a href="https://whiteoutcenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://appslocked.com/cl/i/5kqk4w"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
