--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<img src="images/zepeto.png" class="app-icon-img img-fluid">
 							<div class="app-title">Zepeto</div>
 							<div class="app-link-wrapper">
-								<a href="https://zepetocenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://verifysuper.com/cl/i/99g9pg"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
