--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<img src="images/honkai.png" class="app-icon-img img-fluid">
 							<div class="app-title">Honkai Star Rail</div>
 							<div class="app-link-wrapper">
-								<a href="https://honkaicenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://verifysuper.com/cl/i/kl1l48"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
