--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
+							<img src="images/miside.png" class="app-icon-img img-fluid">
+							<div class="app-title">Miside</div>
+							<div class="app-link-wrapper">
+								<a href="https://locked3.com/cl/i/kl9xdq"><span class="lnr lnr-download"></span>Install</a>
+							</div>
+						</div>
+					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
 							<img src="images/loveisland.png" class="app-icon-img img-fluid">
 							<div class="app-title">Love Island</div>
 							<div class="app-link-wrapper">
