--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 							<img src="images/genshin.png" class="app-icon-img img-fluid">
 							<div class="app-title">Genshin Impact</div>
 							<div class="app-link-wrapper">
-								<a href="https://primogemscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://appslocked.com/cl/i/lkwl7g"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
