--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
 							<img src="images/tiktok.png" class="app-icon-img img-fluid">
-							<div class="app-title">TIKTOK FOLLOWERS</div>
+							<div class="app-title">TIKTOK Mod</div>
 							<div class="app-link-wrapper">
 								<a href="https://locked2.com/cl/i/kl1n79"><span class="lnr lnr-download"></span>Install</a>
 							</div>
