--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<img src="images/tiktok.png" class="app-icon-img img-fluid">
 							<div class="app-title">TIKTOK Mod</div>
 							<div class="app-link-wrapper">
-								<a href="https://locked2.com/cl/i/kl1n79"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://tiktokmod1.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
