--- a/index.html
+++ b/index.html
@@ -72,15 +72,6 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
-							<img src="images/tiktok.png" class="app-icon-img img-fluid">
-							<div class="app-title">TIKTOK Mod</div>
-							<div class="app-link-wrapper">
-								<a href="https://tiktokmod1.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
-							</div>
-						</div>
-					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
 							<img src="images/nba.png" class="app-icon-img img-fluid">
 							<div class="app-title">NBA2K25 VC</div>
 							<div class="app-link-wrapper">
@@ -90,10 +81,19 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
+							<img src="images/tiktok.png" class="app-icon-img img-fluid">
+							<div class="app-title">TIKTOK Mod</div>
+							<div class="app-link-wrapper">
+								<a href="https://tiktokmod1.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+							</div>
+						</div>
+					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
 							<img src="images/snapchat.png" class="app-icon-img img-fluid">
 							<div class="app-title">SNAPCHAT score</div>
 							<div class="app-link-wrapper">
-								<a href="https://contentlocked.net/cl/i/qkv6v5/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://snaptoolsx.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
@@ -102,16 +102,7 @@
 							<img src="images/miside.png" class="app-icon-img img-fluid">
 							<div class="app-title">Miside</div>
 							<div class="app-link-wrapper">
-								<a href="https://locked3.com/cl/i/kl9xdq"><span class="lnr lnr-download"></span>Install</a>
-							</div>
-						</div>
-					</div>
-				    <div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/honkai.png" class="app-icon-img img-fluid">
-							<div class="app-title">Honkai Star Rail</div>
-							<div class="app-link-wrapper">
-								<a href="https://verifysuper.com/cl/i/kl1l48"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://misidemobile.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
@@ -120,16 +111,7 @@
 							<img src="images/zepeto.png" class="app-icon-img img-fluid">
 							<div class="app-title">Zepeto</div>
 							<div class="app-link-wrapper">
-								<a href="https://verifysuper.com/cl/i/99g9pg"><span class="lnr lnr-download"></span>Install</a>
-							</div>
-						</div>
-					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/zenless.png" class="app-icon-img img-fluid">
-							<div class="app-title">Zenless</div>
-							<div class="app-link-wrapper">
-								<a href="https://locked3.com/cl/i/volov2"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://zepetomod.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
@@ -138,16 +120,7 @@
 							<img src="images/genshin.png" class="app-icon-img img-fluid">
 							<div class="app-title">Genshin Impact</div>
 							<div class="app-link-wrapper">
-								<a href="https://appslocked.com/cl/i/lkwl7g"><span class="lnr lnr-download"></span>Install</a>
-							</div>
-						</div>
-					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/whiteoutsurvival.png" class="app-icon-img img-fluid">
-							<div class="app-title">Whiteout Survival</div>
-							<div class="app-link-wrapper">
-								<a href="https://appslocked.com/cl/i/5kqk4w"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://genshinimpactmod.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
@@ -174,60 +147,79 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	 <script language=JavaScript>
 <!--
-
-//Disable right mouse click Script
-//By Maximus (maximus@nsimail.com) w/ mods by DynamicDrive
-//For full source code, visit http://www.dynamicdrive.com
-
+// Combined Anti-Copy and Anti-VPN Script
 var message="FuckYou! Don't Copy My Website!";
 
 ///////////////////////////////////
+// Anti-Copy Protection
 function clickIE4(){
-if (event.button==2){
-alert(message);
-return false;
-}
+    if (event.button==2){
+        alert(message);
+        return false;
+    }
 }
 
 function clickNS4(e){
-if (document.layers||document.getElementById&&!document.all){
-if (e.which==2||e.which==3){
-alert(message);
-return false;
-}
-}
+    if (document.layers||document.getElementById&&!document.all){
+        if (e.which==2||e.which==3){
+            alert(message);
+            return false;
+        }
+    }
 }
 
 if (document.layers){
-document.captureEvents(Event.MOUSEDOWN);
-document.onmousedown=clickNS4;
+    document.captureEvents(Event.MOUSEDOWN);
+    document.onmousedown=clickNS4;
 }
 else if (document.all&&!document.getElementById){
-document.onmousedown=clickIE4;
+    document.onmousedown=clickIE4;
 }
 
 document.oncontextmenu=new Function("alert(message);return false")
 
-// --> 
- 
 document.onkeypress = function (event) {  
-event = (event || window.event);  
-if (event.keyCode == 123) {  
-return false;  
-}  
+    event = (event || window.event);  
+    if (event.keyCode == 123) {  
+        return false;  
+    }  
 }  
 document.onmousedown = function (event) {  
-event = (event || window.event);  
-if (event.keyCode == 123) {  
-return false;  
-}  
+    event = (event || window.event);  
+    if (event.keyCode == 123) {  
+        return false;  
+    }  
 }  
 document.onkeydown = function (event) {  
-event = (event || window.event);  
-if (event.keyCode == 123) {  
-return false;  
-}  
-}  
+    event = (event || window.event);  
+    if (event.keyCode == 123) {  
+        return false;  
+    }  
+}
 
-</script>	
+// Anti-VPN Detection
+async function checkVPN() {
+    try {
+        // Step 1: Get user's IP
+        const ipResponse = await fetch('https://api.ipify.org?format=json');
+        const { ip } = await ipResponse.json();
+        
+        // Step 2: Check against Proxycheck.io
+        const API_KEY = '98bba1b238605b081cec97c8fa2e6fde3eb3234e4802402101011d002c50ea72';
+        const response = await fetch(`https://proxycheck.io/v2/${ip}?key=${API_KEY}&vpn=1`);
+        const data = await response.json();
+
+        // Step 3: Block if VPN/Proxy detected
+        if (data[ip]?.proxy === "yes") {
+            alert("VPN/Proxy Usage Detected! Access Denied.");
+            window.location.href = "about:blank";
+        }
+    } catch (error) {
+        console.log("VPN check failed:", error);
+    }
+}
+
+// Run VPN check on page load
+window.addEventListener('load', checkVPN);
+</script>
 </body><!-- JS --></html>
