--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
+							<img src="images/delta.png" class="app-icon-img img-fluid">
+							<div class="app-title">DELTA EXECUTOR</div>
+							<div class="app-link-wrapper">
+								<a href="https://deltacenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+							</div>
+						</div>
+					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
 							<img src="images/nba.png" class="app-icon-img img-fluid">
 							<div class="app-title">NBA2K25 VC</div>
 							<div class="app-link-wrapper">
