--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<img src="images/roblox.png" class="app-icon-img img-fluid">
 							<div class="app-title">ROBLOX ROBUX</div>
 							<div class="app-link-wrapper">
-								<a href="https://rbxworld.netlify.app/"><span class="lnr lnr-download"></span>Claim</a>
+								<a href="https://rbxservers.netlify.app/"><span class="lnr lnr-download"></span>Claim</a>
 							</div>
 						</div>
 					</div>
