--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
+							<img src="images/delta.png" class="app-icon-img img-fluid">
+							<div class="app-title">DELTA KEY GENERATOR</div>
+							<div class="app-link-wrapper">
+								<a href="https://deltakeys.netlify.app/"><span class="lnr lnr-download"></span>claim</a>
+							</div>
+						</div>
+					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
 							<img src="images/dti.png" class="app-icon-img img-fluid">
 							<div class="app-title">Dress To Impress Items</div>
 							<div class="app-link-wrapper">
