--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
-							<img src="images/delta.png" class="app-icon-img img-fluid">
+							<img src="images/scripts logo.png" class="app-icon-img img-fluid">
 							<div class="app-title">ROBLOX SCRIPTS</div>
 							<div class="app-link-wrapper">
 								<a href="https://scriptscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
