--- a/index.html
+++ b/index.html
@@ -56,15 +56,6 @@
 
 				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
-							<img src="images/delta.png" class="app-icon-img img-fluid">
-							<div class="app-title">DELTA EXECUTOR</div>
-							<div class="app-link-wrapper">
-								<a href="https://deltacenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
-							</div>
-						</div>
-					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
 							<img src="images/scripts logo.png" class="app-icon-img img-fluid">
 							<div class="app-title">ROBLOX SCRIPTS</div>
 							<div class="app-link-wrapper">
@@ -74,19 +65,37 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
-							<img src="images/roblox.png" class="app-icon-img img-fluid">
-							<div class="app-title">ROBLOX ROBUX</div>
+							<img src="images/delta.png" class="app-icon-img img-fluid">
+							<div class="app-title">DELTA EXECUTOR</div>
 							<div class="app-link-wrapper">
-								<a href="https://rbxservers.netlify.app/"><span class="lnr lnr-download"></span>Claim</a>
+								<a href="https://deltacenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
-							<img src="images/miside.png" class="app-icon-img img-fluid">
-							<div class="app-title">Miside</div>
+							<img src="images/xeno logo.jpg" class="app-icon-img img-fluid">
+							<div class="app-title">XENO EXECUTOR</div>
 							<div class="app-link-wrapper">
-								<a href="https://misidemobile.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://xenocenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+							</div>
+						</div>
+					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
+							<img src="images/fluxus executor.png" class="app-icon-img img-fluid">
+							<div class="app-title">FLUXUS EXECUTOR</div>
+							<div class="app-link-wrapper">
+								<a href="https://flexuscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+							</div>
+						</div>
+					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
+							<img src="images/roblox.png" class="app-icon-img img-fluid">
+							<div class="app-title">ROBLOX ROBUX</div>
+							<div class="app-link-wrapper">
+								<a href="https://rbxservers.netlify.app/"><span class="lnr lnr-download"></span>Claim</a>
 							</div>
 						</div>
 					</div>
