--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
-							<img src="images/fluxus executor.png" class="app-icon-img img-fluid">
+							<img src="images/fluxus.png" class="app-icon-img img-fluid">
 							<div class="app-title">FLUXUS EXECUTOR</div>
 							<div class="app-link-wrapper">
 								<a href="https://flexuscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
