--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<img src="images/fluxus.png" class="app-icon-img img-fluid">
 							<div class="app-title">FLUXUS EXECUTOR</div>
 							<div class="app-link-wrapper">
-								<a href="https://flexuscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://fluxuscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
