--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<img src="images/scripts logo.png" class="app-icon-img img-fluid">
 							<div class="app-title">ROBLOX SCRIPTS</div>
 							<div class="app-link-wrapper">
-								<a href="https://scriptscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://scriptszone.vercel.app/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
