--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J1BSNLE03B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J1BSNLE03B');
+</script>
   <title>Modded Apps For Free on iOS and Android</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="description" content="Modded Apps For Free on iOS and Android">
