--- a/index.html
+++ b/index.html
@@ -108,6 +108,51 @@
 							</div>
 						</div>
 					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
+							<img src="images/SYNAPSE.png" class="app-icon-img img-fluid">
+							<div class="app-title">SYNAPSE X EXECUTOR</div>
+							<div class="app-link-wrapper">
+								<a href="https://synapasecenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+							</div>
+						</div>
+					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
+							<img src="images/HYDROGEN.jpeg" class="app-icon-img img-fluid">
+							<div class="app-title">HYDROGEN EXECUTOR</div>
+							<div class="app-link-wrapper">
+								<a href="https://hydrogencenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+							</div>
+						</div>
+					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
+							<img src="images/ARCEUS.jpeg" class="app-icon-img img-fluid">
+							<div class="app-title">ARCEUS X EXECUTOR</div>
+							<div class="app-link-wrapper">
+								<a href="https://arceuscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+							</div>
+						</div>
+					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
+							<img src="images/RC7 EXECUTOR.jpeg" class="app-icon-img img-fluid">
+							<div class="app-title">RC7 EXECUTOR</div>
+							<div class="app-link-wrapper">
+								<a href="https://rc7center.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+							</div>
+						</div>
+					</div>
+					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+						<div class="app-item-content">
+							<img src="images/SF EXECUTOR.jpeg" class="app-icon-img img-fluid">
+							<div class="app-title">SF EXECUTOR</div>
+							<div class="app-link-wrapper">
+								<a href="https://sfcenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
+							</div>
+						</div>
+					</div>
 				<div class="no-result-found-wrapper">
 					<span class="lnr lnr-sad"></span>
 					<span>Nothing Found</span>
