--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
-							<img src="images/SYNAPSE.png" class="app-icon-img img-fluid">
+							<img src="images/synapse.jpeg" class="app-icon-img img-fluid">
 							<div class="app-title">SYNAPSE X EXECUTOR</div>
 							<div class="app-link-wrapper">
 								<a href="https://synapasecenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
@@ -119,7 +119,7 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
-							<img src="images/HYDROGEN.jpeg" class="app-icon-img img-fluid">
+							<img src="images/hydrogen.jpeg" class="app-icon-img img-fluid">
 							<div class="app-title">HYDROGEN EXECUTOR</div>
 							<div class="app-link-wrapper">
 								<a href="https://hydrogencenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
@@ -128,7 +128,7 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
-							<img src="images/ARCEUS.jpeg" class="app-icon-img img-fluid">
+							<img src="images/arceus.jpeg" class="app-icon-img img-fluid">
 							<div class="app-title">ARCEUS X EXECUTOR</div>
 							<div class="app-link-wrapper">
 								<a href="https://arceuscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
@@ -137,7 +137,7 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
-							<img src="images/RC7 EXECUTOR.jpeg" class="app-icon-img img-fluid">
+							<img src="images/rc7.jpeg" class="app-icon-img img-fluid">
 							<div class="app-title">RC7 EXECUTOR</div>
 							<div class="app-link-wrapper">
 								<a href="https://rc7center.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
@@ -146,7 +146,7 @@
 					</div>
 					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
-							<img src="images/SF EXECUTOR.jpeg" class="app-icon-img img-fluid">
+							<img src="images/sf executor.jpeg" class="app-icon-img img-fluid">
 							<div class="app-title">SF EXECUTOR</div>
 							<div class="app-link-wrapper">
 								<a href="https://sfcenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
