--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="container">
 				<div class="header-content animated bounceIn">
 					<h1><span>MODS</span>GALAXY</h1>
-					<p>Premium Roblox Scripts & Elite Executors – Exclusive Modded Tools for Next-Level Gameplay!</p>
+					<p>Premium Roblox Scripts & Elite Executors – for Next-Level Gameplay!</p>
 				</div>
 			</div>
 		</header>
