--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 
   gtag('config', 'G-J1BSNLE03B');
 </script>
-  <title>Modded Apps For Free on iOS and Android</title>
+  <title>Premium executors & Scripts For Free on iOS and Android</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="description" content="Modded Apps For Free on iOS and Android">
+  <meta name="description" content="🔥 Premium Executors & Scripts – 100% Free (iOS & Android)
+Unlock VIP features, game hacks, and unlimited resources with the best executors & scripts—no root or jailbreak needed!">
   <meta charset="UTF-8">
 
   <!-- Correct Favicon (use PNG or ICO for best browser support) -->
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <!-- Open Graph Meta Tags (fix image path here too) -->
-  <meta property="og:title" content="Modded Apps For Free on iOS and Android">
-  <meta property="og:description" content="Modded Apps For Free on iOS and Android">
+  <meta property="og:title" content="Premium executors & Scripts For Free on iOS and Android">
+  <meta property="og:description" content="Premium executors & Scripts For Free on iOS and Android">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://onmod.site">
   <meta property="og:image" content="https://i.imgur.com/yGn9d6L.png">
@@ -30,7 +31,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@tweetname">
   <meta name="twitter:title" content="onmod.site">
-  <meta name="twitter:description" content="Modded Apps & Game Resources">
+  <meta name="twitter:description" content="Premium executors & Scripts For Free on iOS and Android">
   <meta name="twitter:image" content="https://i.imgur.com/yGn9d6L.png">
 
   <!-- Stylesheets -->
