--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
 </script>
   <title>Premium executors & Scripts For Free on iOS and Android</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="description" content="🔥 Premium Executors & Scripts – 100% Free (iOS & Android)
-Unlock VIP features, game hacks, and unlimited resources with the best executors & scripts—no root or jailbreak needed!">
+  <meta name="description" content="🚀 [NEW 2025] Grow a Garden Script: Instant Auto-Farm, OP Dupes & Key Bypass! ✅ 100% Free Download for Delta Executor or All (iOS/Android/PC). ⚡ Get the UPDATED script + anti-ban tutorial!">
   <meta charset="UTF-8">
-  <!-- SEO Tags for Landing Page -->
-  <meta name="keywords" content="grow a garden script, grow a garden roblox script, roblox grow a garden script, script grow a garden, grow a garden script pastebin, grow a garden script 2025, delta executor grow a garden, grow a garden auto farm, grow a garden dupe script, grow a garden item stealer, grow a garden no key, grow a garden script mobile, grow a garden hack, grow a garden roblox hack, free grow a garden script, roblox script grow a garden, grow a garden script download, grow a garden roblox 2025, grow a garden script pc, grow a garden delta executor, grow a garden mod script">
-
+ 
   <!-- Correct Favicon (use PNG or ICO for best browser support) -->
   <link rel="icon" href="images/favicon.png" type="image/png">
 
