--- a/index.html
+++ b/index.html
@@ -1,158 +1,147 @@
-
-
-
 <head>
+<!-- Existing head content remains unchanged -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-J1BSNLE03B"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-J1BSNLE03B');
 </script>
-  <title>Premium executors & Scripts For Free on iOS and Android</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="description" content="🚀 [NEW 2025] Grow a Garden Script: Instant Auto-Farm, OP Dupes & Key Bypass! ✅ 100% Free Download for Delta Executor or All (iOS/Android/PC). ⚡ Get the UPDATED script + anti-ban tutorial!">
-  <meta charset="UTF-8">
- 
-  <!-- Correct Favicon (use PNG or ICO for best browser support) -->
-  <link rel="icon" href="images/favicon.png" type="image/png">
-
-  <!-- Open Graph Meta Tags (fix image path here too) -->
-  <meta property="og:title" content="Premium executors & Scripts For Free on iOS and Android">
-  <meta property="og:description" content="Premium executors & Scripts For Free on iOS and Android">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://onmod.site">
-  <meta property="og:image" content="https://i.imgur.com/yGn9d6L.png">
-
-  <!-- Twitter Meta -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@tweetname">
-  <meta name="twitter:title" content="onmod.site">
-  <meta name="twitter:description" content="Premium executors & Scripts For Free on iOS and Android">
-  <meta name="twitter:image" content="https://i.imgur.com/yGn9d6L.png">
-
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="css/icon-font.css">
-  <link rel="stylesheet" href="css/all.css" crossorigin="anonymous">
-  <link rel="canonical" href="https://onmod.site">
-  <link href="css/css.css" rel="stylesheet">
-  <link href="css/bootstrap.css" rel="stylesheet">  
-  <link href="css/animate.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">	
+<title>Premium executors & Scripts For Free on iOS and Android</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="description" content="🚀 [NEW 2025] Grow a Garden Script: Instant Auto-Farm, OP Dupes & Key Bypass! ✅ 100% Free Download for Delta Executor or All (iOS/Android/PC). ⚡ Get the UPDATED script + anti-ban tutorial!">
+<meta charset="UTF-8">
+<link rel="icon" href="images/favicon.png" type="image/png">
+<meta property="og:title" content="Premium executors & Scripts For Free on iOS and Android">
+<meta property="og:description" content="Premium executors & Scripts For Free on iOS and Android">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://onmod.site">
+<meta property="og:image" content="https://i.imgur.com/yGn9d6L.png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@tweetname">
+<meta name="twitter:title" content="onmod.site">
+<meta name="twitter:description" content="Premium executors & Scripts For Free on iOS and Android">
+<meta name="twitter:image" content="https://i.imgur.com/yGn9d6L.png">
+<link rel="stylesheet" href="css/icon-font.css">
+<link rel="stylesheet" href="css/all.css" crossorigin="anonymous">
+<link rel="canonical" href="https://onmod.site">
+<link href="css/css.css" rel="stylesheet">
+<link href="css/bootstrap.css" rel="stylesheet">  
+<link href="css/animate.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">	
 </head>
-	<body>
-		<div id="particles-js"></div>
-		<header>
-			<div class="container">
-				<div class="header-content animated bounceIn">
-					<h1><span>MODS</span>GALAXY</h1>
-					<p>Premium Roblox Scripts and Elite Executors – for Next-Level Gameplay!</p>
-				</div>
+<body>
+	<div id="particles-js"></div>
+	<header>
+		<div class="container">
+			<div class="header-content animated bounceIn">
+				<h1><span>MODS</span>GALAXY</h1>
+				<p>Premium Roblox Scripts and Elite Executors – for Next-Level Gameplay!</p>
 			</div>
-		</header>
-		<section class="app-grid-section">
-			<div class="container">
-				<div class="game-search-wrapper">
-					<h3>Search our library</h3>
-					<div class="input-icon-wrapper">
-						<span class="lnr lnr-magnifier"></span>
-						<input type="text" class="quicksearch input-style" placeholder="Your search term...">
-					</div>	
-				</div>
-				<div class="app-section-content" style="position: relative; height: 1562.4px;">
-
+		</div>
+	</header>
+	<section class="app-grid-section">
+		<div class="container">
+			<div class="game-search-wrapper">
+				<h3>Search our library</h3>
+				<div class="input-icon-wrapper">
+					<span class="lnr lnr-magnifier"></span>
+					<input type="text" class="quicksearch input-style" placeholder="Your search term...">
+				</div>	
+			</div>
+			<div class="app-section-content" style="position: relative; height: 1562.4px;">
 				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/scripts logo.png" class="app-icon-img img-fluid">
-							<div class="app-title">GROW A GARDEN SCRIPTS</div>
-							<div class="app-link-wrapper">
-								<a href="https://scriptschecker.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
-							</div>
+					<div class="app-item-content">
+						<img src="images/scripts logo.png" class="app-icon-img img-fluid">
+						<div class="app-title">GROW A GARDEN SCRIPTS</div>
+						<div class="app-link-wrapper">
+							<a href="https://scriptschecker.netlify.app/" id="grow-a-garden-install" class="install-link"><span class="lnr lnr-download"></span>Install</a>
 						</div>
 					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/delta.png" class="app-icon-img img-fluid">
-							<div class="app-title">DELTA EXECUTOR</div>
-							<div class="app-link-wrapper">
-								<a href="https://deltacenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
-							</div>
+				</div>
+				<!-- Other app-items remain unchanged -->
+				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+					<div class="app-item-content">
+						<img src="images/delta.png" class="app-icon-img img-fluid">
+						<div class="app-title">DELTA EXECUTOR</div>
+						<div class="app-link-wrapper">
+							<a href="https://deltacenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 						</div>
 					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/xeno logo.jpg" class="app-icon-img img-fluid">
-							<div class="app-title">XENO EXECUTOR</div>
-							<div class="app-link-wrapper">
-								<a href="https://xenocenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
-							</div>
+				</div>
+				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+					<div class="app-item-content">
+						<img src="images/xeno logo.jpg" class="app-icon-img img-fluid">
+						<div class="app-title">XENO EXECUTOR</div>
+						<div class="app-link-wrapper">
+							<a href="https://xenocenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 						</div>
 					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/krnl executor.png" class="app-icon-img img-fluid">
-							<div class="app-title">KRNL EXECUTOR</div>
-							<div class="app-link-wrapper">
-								<a href="https://krnlcenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
-							</div>
+				</div>
+				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+					<div class="app-item-content">
+						<img src="images/krnl executor.png" class="app-icon-img img-fluid">
+						<div class="app-title">KRNL EXECUTOR</div>
+						<div class="app-link-wrapper">
+							<a href="https://krnlcenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 						</div>
 					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/fluxus.png" class="app-icon-img img-fluid">
-							<div class="app-title">FLUXUS EXECUTOR</div>
-							<div class="app-link-wrapper">
-								<a href="https://fluxuscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
-							</div>
+				</div>
+				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+					<div class="app-item-content">
+						<img src="images/fluxus.png" class="app-icon-img img-fluid">
+						<div class="app-title">FLUXUS EXECUTOR</div>
+						<div class="app-link-wrapper">
+							<a href="https://fluxuscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 						</div>
 					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/synapse.jpeg" class="app-icon-img img-fluid">
-							<div class="app-title">SYNAPSE X EXECUTOR</div>
-							<div class="app-link-wrapper">
-								<a href="https://synapasecenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
-							</div>
+				</div>
+				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+					<div class="app-item-content">
+						<img src="images/synapse.jpeg" class="app-icon-img img-fluid">
+						<div class="app-title">SYNAPSE X EXECUTOR</div>
+						<div class="app-link-wrapper">
+							<a href="https://synapasecenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 						</div>
 					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/hydrogen.jpeg" class="app-icon-img img-fluid">
-							<div class="app-title">HYDROGEN EXECUTOR</div>
-							<div class="app-link-wrapper">
-								<a href="https://hydrogencenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
-							</div>
+				</div>
+				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+					<div class="app-item-content">
+						<img src="images/hydrogen.jpeg" class="app-icon-img img-fluid">
+						<div class="app-title">HYDROGEN EXECUTOR</div>
+						<div class="app-link-wrapper">
+							<a href="https://hydrogencenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 						</div>
 					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/arceus.jpeg" class="app-icon-img img-fluid">
-							<div class="app-title">ARCEUS X EXECUTOR</div>
-							<div class="app-link-wrapper">
-								<a href="https://arceuscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
-							</div>
+				</div>
+				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+					<div class="app-item-content">
+						<img src="images/arceus.jpeg" class="app-icon-img img-fluid">
+						<div class="app-title">ARCEUS X EXECUTOR</div>
+						<div class="app-link-wrapper">
+							<a href="https://arceuscenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 						</div>
 					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/rc7.jpeg" class="app-icon-img img-fluid">
-							<div class="app-title">RC7 EXECUTOR</div>
-							<div class="app-link-wrapper">
-								<a href="https://rc7center.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
-							</div>
+				</div>
+				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+					<div class="app-item-content">
+						<img src="images/rc7.jpeg" class="app-icon-img img-fluid">
+						<div class="app-title">RC7 EXECUTOR</div>
+						<div class="app-link-wrapper">
+							<a href="https://rc7center.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 						</div>
 					</div>
-					<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
-						<div class="app-item-content">
-							<img src="images/sf executor.jpeg" class="app-icon-img img-fluid">
-							<div class="app-title">SF EXECUTOR</div>
-							<div class="app-link-wrapper">
-								<a href="https://sfcenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
-							</div>
+				</div>
+				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
+					<div class="app-item-content">
+						<img src="images/sf executor.jpeg" class="app-icon-img img-fluid">
+						<div class="app-title">SF EXECUTOR</div>
+						<div class="app-link-wrapper">
+							<a href="https://sfcenter.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 						</div>
 					</div>
+				</div>
 				<div class="no-result-found-wrapper">
 					<span class="lnr lnr-sad"></span>
 					<span>Nothing Found</span>
@@ -168,68 +157,79 @@
 			</div>
 		</footer>
 	
-		
 	<script type="text/javascript" src="js/jquery.js"></script>	
 	<script type="text/javascript" src="js/isotope.js"></script>
 	<script src="js/particles.js"></script>
 	<script src="js/app.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	 <script language=JavaScript>
-<!--
+	<script>
+		// Geolocation script for GROW A GARDEN SCRIPTS install button
+		$(document).ready(function() {
+			const usaLink = "https://scriptszoneusa.vercel.app/"; // USA-specific link
+			const defaultLink = "https://scriptszone.vercel.app/"; // Default link for non-USA users
+			const installButton = $("#grow-a-garden-install");
 
-//Disable right mouse click Script
-//By Maximus (maximus@nsimail.com) w/ mods by DynamicDrive
-//For full source code, visit http://www.dynamicdrive.com
+			// Function to update the install button link
+			function updateInstallLink(link) {
+				installButton.attr("href", link);
+			}
 
-var message="FuckYou! Don't Copy My Website!";
-
-///////////////////////////////////
-function clickIE4(){
-if (event.button==2){
-alert(message);
-return false;
-}
-}
-
-function clickNS4(e){
-if (document.layers||document.getElementById&&!document.all){
-if (e.which==2||e.which==3){
-alert(message);
-return false;
-}
-}
-}
-
-if (document.layers){
-document.captureEvents(Event.MOUSEDOWN);
-document.onmousedown=clickNS4;
-}
-else if (document.all&&!document.getElementById){
-document.onmousedown=clickIE4;
-}
-
-document.oncontextmenu=new Function("alert(message);return false")
-
-// --> 
- 
-document.onkeypress = function (event) {  
-event = (event || window.event);  
-if (event.keyCode == 123) {  
-return false;  
-}  
-}  
-document.onmousedown = function (event) {  
-event = (event || window.event);  
-if (event.keyCode == 123) {  
-return false;  
-}  
-}  
-document.onkeydown = function (event) {  
-event = (event || window.event);  
-if (event.keyCode == 123) {  
-return false;  
-}  
-}  
-
-</script>	
-</body><!-- JS --></html>
+			// Fetch user's country using ipapi.co
+			$.getJSON("https://ipapi.co/json/", function(data) {
+				if (data && data.country_code === "US") {
+					updateInstallLink(usaLink);
+				} else {
+					updateInstallLink(defaultLink);
+				}
+			}).fail(function() {
+				// Fallback to default link if API fails
+				updateInstallLink(defaultLink);
+			});
+		});
+	</script>
+	<script language=JavaScript>
+		// Existing anti-copy script remains unchanged
+		var message="FuckYou! Don't Copy My Website!";
+		function clickIE4(){
+			if (event.button==2){
+				alert(message);
+				return false;
+			}
+		}
+		function clickNS4(e){
+			if (document.layers||document.getElementById&&!document.all){
+				if (e.which==2||e.which==3){
+					alert(message);
+					return false;
+				}
+			}
+		}
+		if (document.layers){
+			document.captureEvents(Event.MOUSEDOWN);
+			document.onmousedown=clickNS4;
+		}
+		else if (document.all&&!document.getElementById){
+			document.onmousedown=clickIE4;
+		}
+		document.oncontextmenu=new Function("alert(message);return false")
+		document.onkeypress = function (event) {  
+			event = (event || window.event);  
+			if (event.keyCode == 123) {  
+				return false;  
+			}  
+		}  
+		document.onmousedown = function (event) {  
+			event = (event || window.event);  
+			if (event.keyCode == 123) {  
+				return false;  
+			}  
+		}  
+		document.onkeydown = function (event) {  
+			event = (event || window.event);  
+			if (event.keyCode == 123) {  
+				return false;  
+			}  
+		}  
+	</script>	
+</body>
+</html>
